[gd_scene load_steps=8 format=3 uid="uid://do35ab20g2g1"]

[ext_resource type="Texture2D" uid="uid://bwi4jubes4ypq" path="res://assets/play.svg" id="1_hw2lp"]
[ext_resource type="Script" path="res://src/player/player_ui.gd" id="1_jkg8e"]
[ext_resource type="Texture2D" uid="uid://qs8il8ds20cw" path="res://assets/pause.svg" id="2_306rd"]
[ext_resource type="Script" path="res://src/common/common_ui/scale_bar.gd" id="2_ukpge"]
[ext_resource type="PackedScene" uid="uid://cmoet6wj7yijy" path="res://src/player/player_menu.tscn" id="5_kgdqc"]

[sub_resource type="InputEventAction" id="InputEventAction_1ck36"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_23otv"]
events = [SubResource("InputEventAction_1ck36")]

[node name="PlayerUi" type="CanvasLayer"]
script = ExtResource("1_jkg8e")

[node name="TextEdit" type="TextEdit" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 400.0
grow_horizontal = 0
editable = false
wrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScaleBar" type="Control" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(600, 30)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("2_ukpge")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayPauseButton" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
shortcut = SubResource("Shortcut_23otv")
texture_normal = ExtResource("1_hw2lp")
texture_pressed = ExtResource("2_306rd")

[node name="SeekBar" type="HSlider" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.01

[node name="TimeLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
horizontal_alignment = 2

[node name="PlayerMenu" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_kgdqc")]
layout_mode = 2

[connection signal="toggled" from="VBoxContainer/MarginContainer/HBoxContainer/PlayPauseButton" to="." method="_on_play_pause_button_toggled"]
